if old version was old, fix it
Signed-off-by: TobiasBonifay <tobias.bonifay@etu.unice.fr>